# minimal_immrax

./: .gitignore  README.md  pyproject.toml
immrax/: __init__.py  embedding.py
immrax/inclusion/: nif.py
